tests/ui/parser/errors/close_delimeter.sol
struct X {
    uint y) //~ ERROR: expected one of `;` or `}`, found `)`
}
